# grand-exchange-trading-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: keep-alive.yml
app/: database.py  fetch.py  main.py  models.py  schemas.py
app/mappings/: items.json  mappingsData.json
app/scripts/: audit.py  importMappings.py  jsonFileInverter.py  pollingData.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/: Chart.jsx  TimestepSelector.jsx
mappings/: dummyData.json  reversedItems.json
scripts/: jsonFileInverter.py  pollingData.py
