[project]
name = "grand-exchange-trading-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.3",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.139.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.50.2",
]
